Moved backend part to its own folder and created a experimental forntend to support the system

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 .env
-/node_modules
+Backend/node_modules
+Frontend/node_modules
 trash.js
 /myenv
 trash.py
-a4.png
-image_2970x2100.png
-/frontend
